Fixed map close problem

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorPrimary">
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="20dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:hint="نام کاربری">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loginusername"
             android:layout_width="match_parent"
@@ -19,7 +20,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:layout_margin="20dp"
+        android:hint="رمز عبور">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loginpassword"
             android:layout_width="match_parent"
@@ -31,7 +34,7 @@
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:background="@color/colorPrimaryDark"
         android:clickable="true"
-        android:textColorLink="@color/colorPrimary"
-        android:text="login"/>
+        android:text="ورود" />
 </LinearLayout>
