--- a/app/src/main/res/layout/activity_mobilepayment.xml
+++ b/app/src/main/res/layout/activity_mobilepayment.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar_everywhere" android:id="@+id/toolbar"/>
+
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mobilepaymentmapview"
         android:layout_width="match_parent"
