--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,66 +2,145 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center|top"
-    android:gravity="center_horizontal"
-    android:layout_marginTop="60dp"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/reportmainactivity"
-            android:layout_width="170dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/report"
-            android:layout_margin="5dp"/>
-
-        <ImageView
-            android:id="@+id/trackmainactivity"
-            android:layout_width="170dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:src="@drawable/track"
-            android:layout_margin="5dp"/>
-    </LinearLayout>
+    <include layout="@layout/toolbar_everywhere" android:id="@+id/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/mobilepaymentmainactivity"
-            android:layout_width="170dp"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_gravity="center"
-            android:src="@drawable/mobilepayment"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <ImageView
-            android:id="@+id/paymentmainactivity"
-            android:layout_width="170dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:src="@drawable/payment"
-            android:layout_margin="5dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/boxborder">
+                <ImageView
+                    android:id="@+id/reportmainactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:src="@drawable/report"
+                    android:layout_margin="5dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="اعلام خسارت"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/boxborder"
+                android:padding="2dp">
+                <ImageView
+                    android:id="@+id/trackmainactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:gravity="center"
+                    android:src="@drawable/track" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="پیگیزی خسارت"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/boxborder"
+                android:padding="2dp">
+                <ImageView
+                    android:id="@+id/aboutusmainactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:gravity="center"
+                    android:src="@drawable/about" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="درباره ما"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/boxborder">
+                <ImageView
+                    android:id="@+id/paymentmainactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:src="@drawable/payment"
+                    android:layout_margin="5dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="مراکز پرداخت"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/boxborder"
+                android:padding="2dp">
+                <ImageView
+                    android:id="@+id/mobilepaymentmainactivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:gravity="center"
+                    android:src="@drawable/mobilepayment" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="مراکز پرداخت سیار"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+
 
     </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/aboutusmainactivity"
-            android:layout_width="170dp"
-            android:layout_centerInParent="true"
-            android:layout_height="100dp"
-            android:src="@drawable/about"
-            android:layout_margin="10dp"/>
-
-
 </LinearLayout>
