--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -21,7 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:hint="رمز عبور">
+        android:hint="رمز عبور"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/colorSecondary">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/loginpassword"
@@ -31,10 +34,13 @@
 
     <Button
         android:id="@+id/loginbutton"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/buttonbackground"
         android:clickable="true"
-        android:text="ورود" />
+        android:text="ورود"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
