--- a/app/src/main/res/layout/fragment_track.xml
+++ b/app/src/main/res/layout/fragment_track.xml
@@ -34,7 +34,10 @@
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/buttonbackground"
         android:clickable="true"
-        android:text="جستجو" />
+        android:text="جستجو"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@color/design_default_color_on_primary"/>
 </LinearLayout>
