--- a/app/src/main/res/drawable/boxborder.xml
+++ b/app/src/main/res/drawable/boxborder.xml
@@ -4,5 +4,5 @@
     <solid android:color="#FFFFFF"/>
     <corners android:radius="10dp" />
     <stroke android:width="2dp"
-        android:color="@color/colorPrimaryDark"/>
+        android:color="@color/colorPrimary"/>
 </shape>
