Added report damage api

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:text="پیگیزی خسارت"
+                    android:text="پیگیر‍ی خسارت"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="16sp"/>
@@ -138,9 +138,5 @@
                     android:textSize="16sp"/>
             </LinearLayout>
         </LinearLayout>
-
-
-
-
     </LinearLayout>
 </LinearLayout>
