--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/buttonbackground"
         android:clickable="true"
         android:text="ورود"
-        android:textColor="@color/design_default_color_on_primary"
-        android:textSize="20sp"
+        android:textSize="@dimen/Subtitle1"
+        android:textColor="#FFFFFF"
         android:textStyle="bold" />
 </LinearLayout>
