--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -80,25 +80,43 @@
                     android:layout_gravity="center"
                     android:layout_margin="5dp"/>
 
-                <EditText
+
+                <Spinner
                     android:id="@+id/insuranceType"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/boxborder"
                     android:layout_margin="5dp"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"
+                    android:layoutDirection="ltr"
                     android:textDirection="rtl"
-                    android:hint="(شخص ثالث یا بدنه)"
-                    android:padding="10dp"/>
+                    android:paddingRight="15dp"
+                     />
 
-                <EditText
-                    android:id="@+id/file"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/boxborder"
-                    android:layout_margin="5dp"
-                    android:textDirection="rtl"
-                    android:hint="انتخاب فایل"
-                    android:padding="10dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_margin="5dp">
+
+                    <Button
+                        android:id="@+id/file"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#2196F3"
+                        android:textDirection="rtl"
+                        android:text="انتخاب فایل"
+                        android:textColor="#FFFFFF"
+                        android:padding="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:id="@+id/filename"
+                        android:textColor="#000000"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
