--- a/app/src/main/res/layout/activity_trackreport.xml
+++ b/app/src/main/res/layout/activity_trackreport.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <LinearLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <include layout="@layout/toolbar_everywhere" android:id="@+id/toolbar"/>
+        <include layout="@layout/toolbar_everywhere" android:id="@+id/toolbar"/>
 
-    <FrameLayout
-        android:id="@+id/trackreportcontainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        <FrameLayout
+            android:id="@+id/trackreportcontainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+</ScrollView>
