--- a/app/src/main/res/layout/alert_layout.xml
+++ b/app/src/main/res/layout/alert_layout.xml
@@ -1,174 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layoutDirection="rtl">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:layoutDirection="rtl"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:text="نام و نام خانوادگی"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/name_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:textDirection="rtl"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/phonenumber"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:text="شماره تلفن"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/phonenumber_value"
+                android:layout_width="0dp"
+                android:textDirection="rtl"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/nationalcode"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:text="کد ملی"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/nationalcode_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"
+                android:textDirection="rtl"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/insurerFullNumber"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:text="شماره بیمه نامه"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/policyFullNumber_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textDirection="rtl"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:text="آدرس"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/address_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:id="@+id/desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:text="توضیحات"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/desc_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/iran_sans_medium"
+                android:layoutDirection="rtl"
+                android:textDirection="rtl"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layoutDirection="rtl"
-            android:text="نام و نام خانوادگی"
-            android:textSize="14sp" />
+            android:layout_margin="10dp" />
 
-        <TextView
-            android:id="@+id/name_value"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/trackreportbutton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
+            android:layout_gravity="center|bottom"
+            android:layout_margin="5dp"
+            android:background="@drawable/buttonbackground"
+            android:clickable="true"
+            android:text="صفحه نخست"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/Subtitle1"
+            android:textStyle="bold" />
+
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:id="@+id/phonenumber"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="rtl"
-            android:text="شماره تلفن"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/phonenumber_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:id="@+id/nationalcode"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="rtl"
-            android:text="کد ملی"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/nationalcode_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:id="@+id/insurerFullNumber"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="rtl"
-            android:text="شماره بیمه نامه"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/policyFullNumber_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="rtl"
-            android:text="آدرس"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/address_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
-
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="rtl"
-            android:text="توضیحات"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/desc_value"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="@font/iran_sans_medium"
-            android:layoutDirection="ltr"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/trackreportbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_margin="5dp"
-        android:background="@drawable/buttonbackground"
-        android:clickable="true"
-        android:text="صفحه نخست"
-        android:textColor="#FFFFFF"
-        android:textSize="@dimen/Subtitle1"
-        android:textStyle="bold" />
-
-</LinearLayout>
+</ScrollView>
