--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@android:drawable/spinner_dropdown_background"
-                    android:layoutDirection="ltr"
+                    android:layoutDirection="rtl"
                     android:paddingRight="15dp"
                     android:spinnerMode="dropdown"
                     android:textDirection="rtl" />
@@ -98,16 +98,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@android:drawable/btn_dropdown"
-                    android:layoutDirection="ltr"
+                    android:background="@android:drawable/spinner_dropdown_background"
+                    android:layoutDirection="rtl"
                     android:paddingRight="15dp"
                     android:spinnerMode="dropdown"
-                    android:textDirection="rtl" />
+                    />
 
                 <Button
                     android:id="@+id/file"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:backgroundTint="#2196F3"
                     android:padding="10dp"
                     android:text="انتخاب فایل"
@@ -118,6 +119,7 @@
                     android:id="@+id/filename"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:textColor="#000000" />
             </LinearLayout>
